# aemwel_programing

./: .gitignore  README.md
ex1/: README.md
ex1/python/: ex1-1.py  ex1-2.py
ex2/: README.md  matrix.npy
ex2/c/: Makefile  a.out  ex2-1.c  ex2-2.c  matrix.csv  utils.h  utils.h.gch
ex2/python/: create_npy.py  ex2-1.py  ex2-2.py
ex3/: README.md
ex3/python/: ex3-2.py  ex3-3.py
ex3/src/: CMakeLists.txt  dichotomy.cpp  dichotomy.cu  dichotomy.h  main.cpp
ex3/tex/: dispersion_relation.tex
ex4/: README.md
ex4/src/: Makefile  bloch.py  dichotomy.h  main.c  plot.py  slide.py  slide_stub.py
